@@ -483,6 +483,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #5788: `datetime.timedelta` objects get a new `total_seconds()`
+  method returning the total number of seconds in the duration.  Patch by
+  Brian Quinlan.
+
 - Issue #6615: logging: Used weakrefs in internal handler list.
 
 - Issue #1488943: difflib.Differ() doesn't always add hints for tab characters
